# dpy-paginator

./: .readthedocs.yml  LICENSE  README.md  paginator.py  pyproject.toml
.github/: SECURITY.md
src/: dpy_paginator.py
