[project]
name = "dpy-paginator"
version = "1.0.0"
description = "A paginator utility for discord.py"
authors = [
    {name = "OnceYT", email = "sahaa6919@gmail.com"},
]
license = {text = "MIT"}
dependencies = ["discord.py"]
readme = "README.md"
keywords = ["discord", "py", "discord.py", "paginator"]

[project.urls]
Repository = "https://github.com/OnceYT/dpy-paginator"
Homepage = "https://github.com/OnceYT/dpy-paginator"
Documentation = "https://github.com/OnceYT/dpy-paginator/blob/main/README.md"

[dependencies]
python = "^3.9"
discord.py = "^2.0.0"

[tool.poetry]
name = "dpy-paginator"
version = "1.0.0"
description = "A paginator utility for discord.py"
authors = ["OnceYT <sahaa6919@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
