[project]
name = "dpy-paginator"
version = "1.1.0"
description = "A paginator utility for discord.py with no additional dependencies that makes paginating embeds easier."
authors = [
    {name = "OnceYT", email = "sahaa6919@gmail.com"},
]
license = {text = "MIT"}
dependencies = ["discord.py"]
readme = "README.md"
keywords = ["discord", "py", "discord.py", "paginator", "dpy-paginator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/OnceYT/dpy-paginator"
Homepage = "https://github.com/OnceYT/dpy-paginator"
Documentation = "https://github.com/OnceYT/dpy-paginator/blob/main/README.md"

[dependencies]
python = "^3.9"
discord.py = "^2.0.0"

[tool.poetry]
name = "dpy-paginator"
version = "1.1.0"
description = "A paginator utility for discord.py with no additional dependencies that makes paginating embeds easier."
authors = ["OnceYT <sahaa6919@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/OnceYT/dpy-paginator"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
